# AlphaMintX

./: .gitignore  Makefile  README.md
agent-plane/: pyproject.toml
agent-plane/src/alphamintx_agent_plane/: __init__.py
agent-plane/src/alphamintx_agent_plane/backtest/: __init__.py  check.py  dataset.py  emit.py
agent-plane/src/alphamintx_agent_plane/client/: __init__.py  controlplane.py  errors.py  http.py
agent-plane/src/alphamintx_agent_plane/contract/: __init__.py  models.py
agent-plane/src/alphamintx_agent_plane/e2e/: __init__.py  emit.py
agent-plane/src/alphamintx_agent_plane/llm/: __init__.py  budget.py  costs.py  errors.py  factory.py  mintrouter.py  prices.json  pricing.py  stub.py
agent-plane/src/alphamintx_agent_plane/pipeline/: __init__.py  graph.py  trace.py
agent-plane/src/alphamintx_agent_plane/scheduler/: __init__.py  __main__.py  checkpoint.py  loop.py  snapshot.py  state.py
agent-plane/tests/: conftest.py  test_backtest_check.py  test_backtest_dataset.py  test_backtest_emit.py  test_boundary.py  test_client_http.py  test_contract_models.py  test_e2e_emit.py  test_llm_config_fetch.py  test_llm_routing.py  test_pipeline.py  test_pipeline_degradation.py  test_scheduler_checkpoint.py  test_scheduler_heartbeat.py  test_scheduler_loop.py  test_scheduler_main.py  test_scheduler_snapshot.py  test_scheduler_state.py  test_trace_envelope.py
backtest/: runspec.json
contracts/: agent_trace.schema.json  proposal.schema.json  riskverdict.schema.json
control-plane/: go.mod  go.sum
deploy/: install-deadman.sh  install.sh
docs/: ARCHITECTURE.md  (+3 more)
(+352 files in other folders)
